ログアウト時にkeyを消す処理追加

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -38,6 +38,6 @@ me = {{.me}}
 </form>
 <div id="area"></div>
 
-<a href="/logout">Log out</a>
+<a href="/logout?g={{.key}}">Log out</a>
 </body>
 </html>
